--- a/package.json
+++ b/package.json
@@ -8,25 +8,34 @@
     "dev": "remix dev",
     "postinstall": "remix setup node",
     "start": "remix-serve build",
-    "css:dev": "sass --watch app/styles",
-    "css:build": "sass --no-source-map --style compressed app/styles/*"
+    "css:dev": "postcss -w --config ./postcss.config.js ./app/styles --dir ./app/styles/out",
+    "css:build": "sass --no-source-map --style compressed app/styles/*",
+    "postcss": "postcss  *.scss"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.5",
     "@remix-run/react": "^1.0.6",
     "@remix-run/serve": "^1.0.6",
-    "@types/marked": "^4.0.1",
     "front-matter": "^4.0.2",
     "marked": "^4.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remix": "^1.0.6",
-    "sass": "^1.44.0",
     "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.0.6",
+    "@types/marked": "^4.0.1",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "autoprefixer": "^10.4.0",
+    "cssnano": "^5.0.12",
+    "postcss": "^8.4.5",
+    "postcss-cli": "^9.1.0",
+    "postcss-custom-properties": "^12.0.0",
+    "postcss-import": "^14.0.2",
+    "postcss-scss": "^4.0.2",
+    "tailwindcss": "^3.0.1",
     "typescript": "^4.1.2"
   },
   "engines": {
