--- a/package.json
+++ b/package.json
@@ -5,19 +5,20 @@
   "license": "",
   "scripts": {
     "build": "remix build",
-    "dev": "remix dev",
+    "dev": "pm2-dev ./scripts/pm2.config.js",
     "postinstall": "remix setup node",
     "start": "remix-serve build",
-    "css:dev": "postcss -w --config ./postcss.config.js ./app/styles --dir ./app/styles/out",
-    "css:build": "sass --no-source-map --style compressed app/styles/*",
-    "postcss": "postcss  *.scss"
+    "css:build": "postcss styles/**/*.css --base styles --dir app/styles",
+    "css:watch": "npm run build:css -- -w"
   },
   "dependencies": {
     "@heroicons/react": "^1.0.5",
     "@remix-run/react": "^1.0.6",
     "@remix-run/serve": "^1.0.6",
+    "eslint": "^8.4.1",
     "front-matter": "^4.0.2",
     "marked": "^4.0.7",
+    "pm2": "^5.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remix": "^1.0.6",
