--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,7 @@
     "strict": true,
     "baseUrl": ".",
     "paths": {
-      "~/*": ["app/*"],
-      "@styles/*": ["app/styles/*"]
+      "~/*": ["app/*"]
     },
 
     // Remix takes care of building everything in `remix build`.
